src/test/deca/codegen/invalid/personal/test_error_overflow.deca
{
    int x=10000000000;
}